infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Describes the deployment 
  name: moderation-depl # Name of deployment
spec:
  replicas: 1 # Create one pod
  selector: #  A selector for the deployment to apply to the pod that the deployment is describing
    matchLabels: # What pod the deployment is applied to
      app: moderation
  template: # This is a pod template. It describes a pod that is launched
    metadata: # Describes the pod
      labels: # label for the pod that the deployment is deploying
        app: moderation
    spec:
      containers:
      - name: moderation
        image: ikechukwu1903/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv # Name of service
spec:
  type: ClusterIP # Type of service
  selector:
    app: moderation # Selects all pods named moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
