infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv # Name of service
spec:
  type: NodePort # Type of service
  selector:
    app: posts # Selects all pods named posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
